--- a/index.html
+++ b/index.html
@@ -138,7 +138,14 @@ footer p,footer a{font-size:14px;color:#aaa}
   <div class="cta">
     <h2>Siap Membuat Acara Anda Lebih Meriah?</h2>
     <p>Hubungi kami sekarang dan dapatkan penawaran terbaik</p>
-    <a href="#contact" class="btn">Hubungi via WhatsApp</a>
+    <a 
+      href="https://wa.me/62881381112330" 
+      class="btn" 
+      target="_blank"
+      rel="noopener"
+    >
+      Hubungi via WhatsApp
+    </a>
   </div>
 </section>
 
